--- a/Android /LocationSave/app/src/main/AndroidManifest.xml
+++ b/Android /LocationSave/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +24,16 @@
             android:name=".RecordListActivity"
             android:label="@string/title_activity_record_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <service android:name=".ActivityRecognizerService" />
+
+        <receiver android:name=".BrodcastManager">
+            <intent-filter>
+                <action android:name="com.LocationPredictor"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+
+        </receiver>
     </application>
 
 </manifest>
