--- a/Android /LocationSave/app/src/main/AndroidManifest.xml
+++ b/Android /LocationSave/app/src/main/AndroidManifest.xml
@@ -4,11 +4,10 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
-        android:name="MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,17 +23,19 @@
         <activity
             android:name=".RecordListActivity"
             android:label="@string/title_activity_record_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".ActivityRecognizerService" />
 
         <receiver android:name=".BrodcastManager">
             <intent-filter>
-                <action android:name="com.LocationPredictor"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
-            </intent-filter>
+                <action android:name="com.LocationPredictor" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </receiver>
+
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
